[package]
name = "nanostorm"
authors = ["Justin Perez <justinmp@vt.edu>"]
description = "An EDR evasion tool that infects executables with nanomites."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
color-eyre = "0.6.2"
indicatif = { version = "0.17.1" }
