[package]
name = "nanostorm"
authors = ["Justin Perez <justinmp@vt.edu>"]
description = "An EDR evasion tool that infects executables with nanomites."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
color-eyre = "0.6.2"
goblin = "0.5.4"
iced-x86 = { version = "1.17.0", features = ["code_asm"] }
indicatif = { version = "0.17.1", features = ["rayon"] }
rayon = "1.5.3"
uuid = { version = "1.1.2", features = ["v4"] }
libnanomite = { path = "../libnanomite" }
rand = "0.8.5"
bincode = "2.0.0-rc.1"
