[package]
name = "stub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {version = "2.0.0-rc.1", features = ["alloc", "derive"]}
libnanomite = { path = "../libnanomite" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.25"
procfs = "0.14"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1